force-app/main/default/objects/Project_Milestone__c/Project_Milestone__c.object-meta.xml
<CustomObject>
    <label>Milestone</label>
    <nameField>
        <displayFormat>MS-{0000}</displayFormat>
        <label>Milestone No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>