force-app/main/default/objects/Project_Milestone__c/fields/Current_Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Milestone_Date__c</fullName>
    <label>Current Milestone Date</label>
    <type>Date</type>
</CustomField>