force-app/main/default/objects/Project_Milestone__c/fields/Health__c.field-meta.xml
<CustomField>
    <fullName>Health__c</fullName>
    <formula>IF(ISPICKVAL(Health_RYG__c,&quot;Green&quot;), IMAGE( &quot;/servlet/servlet.FileDownload?file=01550000000FzOM&quot;,&quot;&quot;), 
IF(ISPICKVAL(Health_RYG__c,&quot;Yellow&quot;), IMAGE( &quot;/servlet/servlet.FileDownload?file=01550000000FzOC&quot;,&quot;&quot;), 
IF(ISPICKVAL(Health_RYG__c,&quot;Red&quot;), IMAGE( &quot;/servlet/servlet.FileDownload?file=01550000000FzO7&quot;,&quot;&quot;), 
&quot;&quot; 
) 
) 
)</formula>
    <inlineHelpText>Green=On Track
Yellow=Indicates Issues/Risks Exist. See Risk/Mitigation for details.
Red=Indicates 1) Change to any milestone date is forthcoming or 2) POR change to Release Date, Budget or Scope (the latter requires approval before any change is made)</inlineHelpText>
    <label>Health</label>
    <type>Text</type>
</CustomField>