force-app/main/default/objects/Project_Milestone__c/fields/Health_Rank__c.field-meta.xml
<CustomField>
    <fullName>Health_Rank__c</fullName>
    <formula>CASE( Health_RYG__c , &quot;Green&quot;, 1, &quot;Yellow&quot; , 2, &quot;Red&quot; ,3,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Health Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>