force-app/main/default/objects/Project_Milestone__c/fields/Health_RYG__c.field-meta.xml
<CustomField>
    <fullName>Health_RYG__c</fullName>
    <inlineHelpText>Green=On Track
Yellow=Indicates Issues/Risks Exist. See Risk/Mitigation for details.
Red=Indicates 1) Change to any milestone date is forthcoming or 2) POR change to Release Date, Budget or Scope (the latter requires approval before any change is made)</inlineHelpText>
    <label>Health RYG</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <color>#009900</color>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <color>#F3D904</color>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <label>Red</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>