force-app/main/default/objects/Project_Milestone__c/fields/Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Name__c</fullName>
    <label>Milestone Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Concept Review Complete</fullName>
            </value>
            <value>
                <fullName>Planning Review Complete</fullName>
            </value>
            <value>
                <fullName>Execution Plan Review Complete</fullName>
            </value>
            <value>
                <fullName>Press Release</fullName>
            </value>
            <value>
                <fullName>Alpha Start</fullName>
            </value>
            <value>
                <fullName>Electrical Design Validation Test Complete</fullName>
            </value>
            <value>
                <fullName>Mechanical Design Validation Test Complete</fullName>
            </value>
            <value>
                <fullName>Product Validation Test Complete</fullName>
            </value>
            <value>
                <fullName>Regulatory</fullName>
            </value>
            <value>
                <fullName>Reliability Test Complete</fullName>
            </value>
            <value>
                <fullName>I&amp;T Test Complete</fullName>
            </value>
            <value>
                <fullName>Code Freeze</fullName>
            </value>
            <value>
                <fullName>HOST SW Performance Test Complete</fullName>
            </value>
            <value>
                <fullName>Beta Start</fullName>
            </value>
            <value>
                <fullName>Field Training</fullName>
            </value>
            <value>
                <fullName>Release Readiness Review Complete</fullName>
            </value>
            <value>
                <fullName>Beta Complete</fullName>
            </value>
            <value>
                <fullName>Commercial Release</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>