force-app/main/default/objects/Project_Milestone__c/fields/Planned_Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Milestone_Date__c</fullName>
    <label>Planned Milestone Date</label>
    <type>Date</type>
</CustomField>