force-app/main/default/objects/Project_Milestone__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <formula>Project__r.Project_Name__c</formula>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>