force-app/main/default/objects/Project_Milestone__c/recordTypes/PM_Milestone.recordType-meta.xml
<RecordType>
    <fullName>PM_Milestone</fullName>
    <active>true</active>
    <description>Used for Program Management Milestones</description>
    <label>PM Milestone</label>
</RecordType>