force-app/main/default/objects/Project_Milestone__c/recordTypes/PS_Milestone.recordType-meta.xml
<RecordType>
    <fullName>PS_Milestone</fullName>
    <active>true</active>
    <description>Used for Professional Services Milestones</description>
    <label>PS Milestone</label>
</RecordType>