force-app/main/default/objects/Project_Milestone__c/validationRules/Planned_Milestone_Date_Cannot_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Planned_Milestone_Date_Cannot_Change</fullName>
    <active>true</active>
    <description>The Planned Milestone Date can&apos;t be changed.</description>
    <errorConditionFormula>AND( 
NOT( ISNEW() ), 
ISCHANGED( Planned_Milestone_Date__c ), 
$RecordType.Name = &quot;PM Milestone&quot;, 
$Profile.Name &lt;&gt; &quot;Program Management - Mgmt&quot;,
$Profile.Name &lt;&gt; &quot;Program Management - Mgmt Extended&quot; 
)</errorConditionFormula>
    <errorDisplayField>Planned_Milestone_Date__c</errorDisplayField>
    <errorMessage>The Planned Milestone Date can&apos;t be changed after it has been entered.</errorMessage>
</ValidationRule>