force-app/main/default/objects/Project_Milestone__c/validationRules/Short_Description_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Short_Description_Required</fullName>
    <active>true</active>
    <description>Short Description is required if Milestone Name is &quot;Other&quot;.</description>
    <errorConditionFormula>AND( 
ISPICKVAL( Milestone_Name__c , &quot;Other&quot;), 
ISBLANK( Short_Description__c ) , 
$RecordType.Name = &quot;PM Milestone&quot; 
)</errorConditionFormula>
    <errorDisplayField>Short_Description__c</errorDisplayField>
    <errorMessage>Short Description is required if Milestone Name is &quot;Other&quot;.</errorMessage>
</ValidationRule>