force-app/main/default/objects/Project_Milestone__c/validationRules/Status_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Validation</fullName>
    <active>true</active>
    <description>Status should be Completed if Actual Completion Date is populated.</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL( Milestone_Status__c, &quot;Completed&quot;)),NOT(ISNULL( Actual_Completion_Date__c )),
$RecordType.Name = &quot;PS Milestone&quot;
)</errorConditionFormula>
    <errorMessage>Status must be &quot;Completed&quot; if the Actual Completion Date is populated.</errorMessage>
</ValidationRule>